--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -20,8 +20,9 @@
             android:text="Back"
             android:textStyle="bold"
             android:textSize="26sp"
+            android:padding="10dp"
             android:textColor="#ff00ff"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
@@ -31,9 +32,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:text="WebView"
             android:textStyle="italic"
-            android:textSize="36sp"
+            android:textSize="32sp"
+            android:padding="3dp"
             android:textColor="@color/white"
-            android:layout_marginStart="20dp"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
